--- a/html/contatos.html
+++ b/html/contatos.html
@@ -13,14 +13,16 @@
 </head>
 <body>
 
+    <div class="logo">
+        <img  src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png' border='1' alt='logo'/>
+    </div><br />
 <div class="container mt-5">
     <div class="conteudo">
         <div class="header">
-            <div id="logo"><img src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png' border='0' alt='logo'/></div>
-            <h2>Construção, Montagens e Manutenções Industriais de Gasodutos. Oleodutos e Poliodutos</h2>
-        
+            <h3>Construção, Montagens e Manutenções Industriais de Gasodutos. Oleodutos e Poliodutos</h3>
+
             <div class="header-right">
-            <a class="active" href="./index.html">Inicio</a>
+            <a class="active" href="index.html">Inicio</a>
             <a href="../html/sobrenos.html">Sobre nós</a>
             <a href="../html/principios.html">Princípios</a>
             <a href="../html/servicos.html">Serviços</a>
