--- a/html/galeria.html
+++ b/html/galeria.html
@@ -15,8 +15,11 @@
 <body>
 
   <div class="logo">
-    <img  src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png' border='1' alt='logo'/>
+    <div class="logo">
+        <a href="./index.html"><img  src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png'border='1' alt='logo'/></a>
+    </div><br />
 </div><br />
+
 <div class="container mt-5">
   <div class="conteudo">
       <div class="header">
