--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="logo">
-        <img  src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png' border='1' alt='logo'/>
+    <a href="index.html"><img  src='https://i.postimg.cc/g2sQXyDD/logo-Sem-Fundo.png'border='1' alt='logo'/></a>
     </div><br />
     <div class="container mt-5">
             <div class="conteudo">
@@ -23,7 +23,7 @@
                     
                     
                         <div class="header-right">
-                        <a class="active" href="#index.html">Inicio</a>
+                        <a class="active" href="index.html">Inicio</a>
                         <a href="./html/sobrenos.html">Sobre nós</a>
                         <a href="./html/principios.html">Princípios</a>
                         <a href="./html/servicos.html">Serviços</a>
